--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <body>
     <div class="container">
       <div class="wrapper">
+        <div class="search-box">
+          <input type="search" placeholder="Search Image" />
+        </div>
         <div class="gallery">
           <a
             href="photos/01.jpg"
@@ -31,6 +34,76 @@
             data-title="The lake was so calm today. We had a great view of the snow on the mountains from here."
             data-alt="Lake"
             ><img src="photos/thumbnails/02.jpg" alt="Lake"
+          /></a>
+          <a
+            href="photos/03.jpg"
+            data-lightbox="Gallery"
+            data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below."
+            data-alt="Canyon"
+            ><img src="photos/thumbnails/03.jpg" alt="Canyon"
+          /></a>
+          <a
+            href="photos/04.jpg"
+            data-lightbox="Gallery"
+            data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. "
+            data-alt="Iceberg"
+            ><img src="photos/thumbnails/04.jpg" alt="Iceberg"
+          /></a>
+          <a
+            href="photos/05.jpg"
+            data-lightbox="Gallery"
+            data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today. "
+            data-alt="Desert"
+            ><img src="photos/thumbnails/05.jpg" alt="Desert"
+          /></a>
+          <a
+            href="photos/06.jpg"
+            data-lightbox="Gallery"
+            data-title="Fall is coming, I love when the leaves on the trees start to change color. "
+            data-alt="Fall"
+            ><img src="photos/thumbnails/06.jpg" alt="Fall"
+          /></a>
+          <a
+            href="photos/07.jpg"
+            data-lightbox="Gallery"
+            data-title="I drove past this plantation yesterday, everything is so green! "
+            data-alt="Plantation"
+            ><img src="photos/thumbnails/07.jpg" alt="Plantation"
+          /></a>
+          <a
+            href="photos/08.jpg"
+            data-lightbox="Gallery"
+            data-title="My summer vacation to the Oregon Coast. I love the sandy dunes!"
+            data-alt="Dunes"
+            ><img src="photos/thumbnails/08.jpg" alt="Dunes"
+          /></a>
+          <a
+            href="photos/09.jpg"
+            data-lightbox="Gallery"
+            data-title="We enjoyed a quiet stroll down this countryside lane. "
+            data-alt="Countryside Lane"
+            ><img src="photos/thumbnails/09.jpg" alt="Countryside Lane"
+          /></a>
+          <a
+            href="photos/10.jpg"
+            data-lightbox="Gallery"
+            data-title="Sunset at the coast! The sky turned a lovely shade of orange."
+            data-alt="Sunset"
+            ><img src="photos/thumbnails/10.jpg" alt="Sunset"
+          /></a>
+          <a
+            href="photos/11.jpg"
+            data-lightbox="Gallery"
+            data-title="I did a tour of a cave today and the view of the landscape below was breathtaking."
+            data-alt="Cave"
+            ><img src="photos/thumbnails/11.jpg" alt="Cave"
+          /></a>
+          <a
+            href="photos/12.jpg"
+            data-lightbox="Gallery"
+            data-title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."
+            data-alt="Bluebells"
+            ><img src="photos/thumbnails/12.jpg" alt="Bluebells"
           /></a>
         </div>
       </div>
