add headline + tagline

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <body>
     <div class="container">
       <div class="wrapper">
+        <h1 class="headline">Interactive Photo Gallery</h1>
+        <p class="tagline">Treehouse Techdegree project 5</p>
         <div class="search-box">
           <input type="search" placeholder="Search Image" />
         </div>
