--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
     <div class="container">
       <div class="wrapper">
         <h1 class="headline">Interactive Photo Gallery</h1>
-        <p class="tagline">Treehouse Techdegree project 5</p>
+        <p class="tagline">
+          Treehouse Techdegree project 5 with HTML, CSS, Jquery and JavaScript
+        </p>
         <div class="search-box">
-          <input type="search" placeholder="Search Image" />
+          <input
+            type="search"
+            id="search"
+            name="search_query"
+            placeholder="Search Image"
+          />
         </div>
         <div class="gallery">
           <a
